<resources>
    <string name="app_name">Quera</string>
    <!-- Login/Signup -->
    <string name="login_button">Login</string>
    <string name="student_signup_button">Signup as student</string>
    <string name="instructor_signup_button">Signup as instructor</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_activity_label">Log in to your account</string>
    <string name="signup_activity_label">Create new account</string>
    <string name="student_signup_tab">Student</string>
    <string name="instructor_signup_tab">Instructor</string>
    <string name="signup_suggestion">Don\'t have an account? Sign up</string>
    <string name="login_suggestion">Already got an account? Log in</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="university_hint">University Name</string>
    <string name="student_number_hint">Student Number</string>
    <string name="password_repeat_hint">Repeat Password</string>
    <string name="invalid_username_error">Not a valid username</string>
    <string name="invalid_password_error">Password must be at least 8 characters</string>
    <string name="username_taken_error">This username is taken</string>
    <string name="password_repeat_error">Password and its repetition don\'t match</string>
    <string name="required_error">Please fill in all the fields</string>
    <string name="fix_errors">Please fix the errors above</string>
    <string name="error_signing_up">Signup failed, please try a few moments later</string>
    <string name="error_loging_up">Login failed, please try a few moments later</string>
    <string name="successful_login">Successfully logged in</string>
    <string name="successful_signup">Successfully signed up</string>
    <string name="assignment">Assignment</string>
    <string name="answer">Answer</string>
    <string name="answers">Answers</string>
    <string name="grade">Grade</string>
    <string name="change">Change</string>
    <string name="change_name">Change name</string>
    <string name="add_assignment">Add assignment</string>
    <string name="student_panel_activity_label">Student Panel</string>
    <string name="student">student</string>
    <string name="username">username</string>
    <string name="professor">professor</string>
    <string name="className">class</string>
    <string name="confirmClassButton">confirm</string>
    <string name="wrongClass">choose one of the classes above.</string>
    <string name="addClass">add to class</string>
    <string name="classesToAddTitle">classes you can add</string>
    <string name="yourClassesTitle">Your classes</string>
    <string name="createClass">create class</string>
    <string name="clas">class name</string>
    <string name="classNameUsed">this name is used</string>
    <string name="classAssignments">Assignments:</string>
    <string name="chooseAssignmentMessage">choose one of the assignments above.</string>
    <string name="CreateAssignment">create assignment</string>
    <string name="your_classes">Your Classes:</string>


    <!-- SharedPreferences keys -->
    <string name="saved_students_key">saved_students_key</string>
    <string name="saved_professors_key">saved_professors_key</string>
    <string name="logout">Logout</string>
    <string name="saved_classes_key">saved_classes_key</string>
    <string name="preference_file_key">com.example.quera</string>
    <string name="saved_assignments_key">saved_assignments_key</string>
    <string name="professor_name">"Professor: "</string>
    <string name="class_name">"Class Title: "</string>
    <string name="write_answer">Write your answer...</string>
    <string name="saved_answers_key">saved_answers_key</string>
    <string name="not_a_member_of_the_class">You are not a memeber of this class</string>
    <string name="not_the_class_owner">You don\'t own this class</string>
</resources>