<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context=".ui.student_panel.AddToClassActivity">


    <TextView
        android:id="@+id/usernameAddToClassTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="" />

    <TextView
        android:id="@+id/classesToAddTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classesToAddTitle" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/allClassseToAddTextVeiw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/addToClassMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/wrongClass"
        android:visibility="visible" />

    <EditText
        android:id="@+id/classNameAddToClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/className" />

    <Button
        android:id="@+id/addToClassConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmClassButton" />

</LinearLayout>