<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context=".ui.professor_panel.CreateClassActivity">

    <TextView
        android:id="@+id/usernameCreateClassTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="" />

    <EditText
        android:id="@+id/classNameCreateClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/className" />

    <TextView
        android:id="@+id/createClassError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classNameUsed"
        android:visibility="invisible" />

    <Button
        android:id="@+id/confirmCreateClassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmClassButton" />

</LinearLayout>