<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/studentAssignmentNameID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assignment"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentAnswerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/write_answer"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/answerGradeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textAlignment="center" />

            <Button
                android:id="@+id/answerButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>