<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.professor_panel.ProfessorPanelActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/usernameProfessorPanelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_classes" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/professorClassesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:text="@string/textview" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/professorPanelMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/wrongClass"
            android:visibility="visible" />

        <EditText
            android:id="@+id/classNameProfessorPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/className" />

        <Button
            android:id="@+id/professorEnterClassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmClassButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createClass"
            android:layout_gravity="bottom|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:text="@string/createClass" />

    </LinearLayout>

</ScrollView>
