<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/studentNameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/viewStudentAnswerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/studentNameID"
                app:layout_constraintTop_toBottomOf="@+id/studentNameID"
                android:autofillHints="Write your answer..."
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/setGradeID"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:text="@string/grade"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gradeID" />

            <EditText
                android:id="@+id/gradeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="Grade..."
                android:inputType="text"
                tools:ignore="LabelFor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>